--- a/README
+++ b/README
@@ -8,3 +8,12 @@ Apps of course) this causes a label to be added to those messages.
 You can then conveniently click on the label and see just the big messages and
 decide which ones are important and which ones are weird photos in BMP from
 your very distant relative.
+
+This script requires IMAPClient, a convenient Python IMAP library.
+http://imapclient.freshfoo.com/
+
+You can install it using PyPI:
+    (sudo) pip install imapclient
+
+or EasyInstall:
+    (sudo) easy_install IMAPClient
